{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 26,
  "lineage": "1f3d9083-76ae-508a-8637-a40e42c23c9e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "calico",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "4"
              }
            ],
            "creation_timestamp": "2024-10-24T09:50:23.567-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-26/global/firewalls/calico-ip",
            "log_config": [],
            "name": "calico-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-26",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/firewalls/calico-ip",
            "source_ranges": [
              "10.244.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "32000",
                  "30007",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-23T07:34:17.847-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-26/global/firewalls/frontend",
            "log_config": [],
            "name": "frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-26",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/firewalls/frontend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-10-24T08:57:42.836-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2425-website-26/global/firewalls/allow-internal-traffic",
            "log_config": [],
            "name": "allow-internal-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/networks/default",
            "priority": 1000,
            "project": "agisit-2425-website-26",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/firewalls/allow-internal-traffic",
            "source_ranges": [
              "10.244.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-26/zones/europe-west4-b/instances/master",
            "instance_id": "4345695845043449697",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCqMEqEnGyRFKTtMO3iTzzzNundEMCedtufRzVXJ9+QCWJaKSlfI9GN43fUw4H8OVZeEAzfgADWLgWkaSow0IaG2G38jZh3VohOV67ig1s8cVUGxVC3gGh05eC/VS4jtIRG4sfaKBTFZFzFsRSORxhFEmIP8c5/KGZ0U0FVl30WrQl1421zGFkCBhbvNWBStSFGPBSAeBjhNc0XlyEb5eFpW3vj3uQC3yKIdzyk54XY3aS/RJ7H3qskhII+5P5vUT2VJ+zOGksrpB3Gjjro6sRYofjj1rrKSPGwkNBiOR5aT/zazBULW6IDuH2qNihj6AJuCfpr1EmJc32lzHuvJHKP vagrant@mgmt\n"
            },
            "metadata_fingerprint": "f27UUktKVCU=",
            "name": "master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.141.229.164",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/networks/default",
                "network_ip": "10.164.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-26"
              }
            ],
            "project": "agisit-2425-website-26",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master"
            ],
            "tags_fingerprint": "4y7qQ8dL1yM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west4-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/disks/worker1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-26/zones/europe-west4-b/instances/worker1",
            "instance_id": "3737384229453215619",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCqMEqEnGyRFKTtMO3iTzzzNundEMCedtufRzVXJ9+QCWJaKSlfI9GN43fUw4H8OVZeEAzfgADWLgWkaSow0IaG2G38jZh3VohOV67ig1s8cVUGxVC3gGh05eC/VS4jtIRG4sfaKBTFZFzFsRSORxhFEmIP8c5/KGZ0U0FVl30WrQl1421zGFkCBhbvNWBStSFGPBSAeBjhNc0XlyEb5eFpW3vj3uQC3yKIdzyk54XY3aS/RJ7H3qskhII+5P5vUT2VJ+zOGksrpB3Gjjro6sRYofjj1rrKSPGwkNBiOR5aT/zazBULW6IDuH2qNihj6AJuCfpr1EmJc32lzHuvJHKP vagrant@mgmt\n"
            },
            "metadata_fingerprint": "f27UUktKVCU=",
            "name": "worker1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.13.224",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/networks/default",
                "network_ip": "10.164.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-26"
              }
            ],
            "project": "agisit-2425-website-26",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/instances/worker1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west4-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/disks/worker2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-26/zones/europe-west4-b/instances/worker2",
            "instance_id": "8905884814749775747",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCqMEqEnGyRFKTtMO3iTzzzNundEMCedtufRzVXJ9+QCWJaKSlfI9GN43fUw4H8OVZeEAzfgADWLgWkaSow0IaG2G38jZh3VohOV67ig1s8cVUGxVC3gGh05eC/VS4jtIRG4sfaKBTFZFzFsRSORxhFEmIP8c5/KGZ0U0FVl30WrQl1421zGFkCBhbvNWBStSFGPBSAeBjhNc0XlyEb5eFpW3vj3uQC3yKIdzyk54XY3aS/RJ7H3qskhII+5P5vUT2VJ+zOGksrpB3Gjjro6sRYofjj1rrKSPGwkNBiOR5aT/zazBULW6IDuH2qNihj6AJuCfpr1EmJc32lzHuvJHKP vagrant@mgmt\n"
            },
            "metadata_fingerprint": "f27UUktKVCU=",
            "name": "worker2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.204.0.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/networks/default",
                "network_ip": "10.164.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-26"
              }
            ],
            "project": "agisit-2425-website-26",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/instances/worker2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west4-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240830",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/disks/worker3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/agisit-2425-website-26/zones/europe-west4-b/instances/worker3",
            "instance_id": "8823033800393275268",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCqMEqEnGyRFKTtMO3iTzzzNundEMCedtufRzVXJ9+QCWJaKSlfI9GN43fUw4H8OVZeEAzfgADWLgWkaSow0IaG2G38jZh3VohOV67ig1s8cVUGxVC3gGh05eC/VS4jtIRG4sfaKBTFZFzFsRSORxhFEmIP8c5/KGZ0U0FVl30WrQl1421zGFkCBhbvNWBStSFGPBSAeBjhNc0XlyEb5eFpW3vj3uQC3yKIdzyk54XY3aS/RJ7H3qskhII+5P5vUT2VJ+zOGksrpB3Gjjro6sRYofjj1rrKSPGwkNBiOR5aT/zazBULW6IDuH2qNihj6AJuCfpr1EmJc32lzHuvJHKP vagrant@mgmt\n"
            },
            "metadata_fingerprint": "f27UUktKVCU=",
            "name": "worker3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.88.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/global/networks/default",
                "network_ip": "10.164.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "agisit-2425-website-26"
              }
            ],
            "project": "agisit-2425-website-26",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2425-website-26/zones/europe-west4-b/instances/worker3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west4-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    }
  ]
}